[gd_scene load_steps=35 format=3 uid="uid://behjde7totgkc"]

[ext_resource type="Script" path="res://scenes/enemy_archer.gd" id="1_4lmdd"]
[ext_resource type="Texture2D" uid="uid://jt51xmogv8pw" path="res://Enemies/Archers/spr_ArcherIdle_strip_NoBkg.png" id="1_jmy8x"]
[ext_resource type="Texture2D" uid="uid://dangk5gaofsn0" path="res://Enemies/Archers/spr_ArcherAttack_strip_NoBkg.png" id="3_yoi13"]
[ext_resource type="Texture2D" uid="uid://cmxktaux0niyf" path="res://Enemies/Archers/spr_ArcherRun_strip_NoBkg.png" id="4_jb65j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drsr6"]
size = Vector2(12.6734, 3.02683)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmt1w"]
size = Vector2(228, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uowur"]
size = Vector2(31, 83)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6a3s"]
atlas = ExtResource("3_yoi13")
region = Rect2(0, 0, 180, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pkp5"]
atlas = ExtResource("3_yoi13")
region = Rect2(180, 0, 180, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7b1d"]
atlas = ExtResource("3_yoi13")
region = Rect2(360, 0, 180, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8qc7"]
atlas = ExtResource("3_yoi13")
region = Rect2(540, 0, 180, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_urogo"]
atlas = ExtResource("3_yoi13")
region = Rect2(720, 0, 180, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3b3j"]
atlas = ExtResource("3_yoi13")
region = Rect2(900, 0, 180, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6suj"]
atlas = ExtResource("3_yoi13")
region = Rect2(1080, 0, 180, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uymif"]
atlas = ExtResource("3_yoi13")
region = Rect2(1260, 0, 180, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jdr3"]
atlas = ExtResource("3_yoi13")
region = Rect2(1440, 0, 180, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvvl0"]
atlas = ExtResource("3_yoi13")
region = Rect2(1620, 0, 180, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pke02"]
atlas = ExtResource("1_jmy8x")
region = Rect2(0, 0, 128, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxsnw"]
atlas = ExtResource("1_jmy8x")
region = Rect2(128, 0, 128, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xotb"]
atlas = ExtResource("1_jmy8x")
region = Rect2(256, 0, 128, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lopre"]
atlas = ExtResource("1_jmy8x")
region = Rect2(384, 0, 128, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgpt3"]
atlas = ExtResource("1_jmy8x")
region = Rect2(512, 0, 128, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_efpx3"]
atlas = ExtResource("1_jmy8x")
region = Rect2(640, 0, 128, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfar6"]
atlas = ExtResource("1_jmy8x")
region = Rect2(768, 0, 128, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xii7o"]
atlas = ExtResource("1_jmy8x")
region = Rect2(896, 0, 128, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s28k3"]
atlas = ExtResource("4_jb65j")
region = Rect2(0, 0, 128, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcjbf"]
atlas = ExtResource("4_jb65j")
region = Rect2(128, 0, 128, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_apf03"]
atlas = ExtResource("4_jb65j")
region = Rect2(256, 0, 128, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys3pw"]
atlas = ExtResource("4_jb65j")
region = Rect2(384, 0, 128, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mc1p"]
atlas = ExtResource("4_jb65j")
region = Rect2(512, 0, 128, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_koduq"]
atlas = ExtResource("4_jb65j")
region = Rect2(640, 0, 128, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4u4h"]
atlas = ExtResource("4_jb65j")
region = Rect2(768, 0, 128, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5ffj"]
atlas = ExtResource("4_jb65j")
region = Rect2(896, 0, 128, 77)

[sub_resource type="SpriteFrames" id="SpriteFrames_afeh1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6a3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pkp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8qc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urogo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3b3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6suj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uymif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jdr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvvl0")
}],
"loop": true,
"name": &"attacking",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pke02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxsnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xotb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lopre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgpt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efpx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfar6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xii7o")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s28k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcjbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apf03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys3pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mc1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koduq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4u4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5ffj")
}],
"loop": true,
"name": &"running",
"speed": 8.0
}]

[node name="Enemy-Archer" type="CharacterBody2D"]
script = ExtResource("1_4lmdd")

[node name="Player Detector" type="Area2D" parent="."]
position = Vector2(3, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Detector"]
position = Vector2(234.5, 198)
rotation = -3.14159
scale = Vector2(46.6332, -42.2885)
shape = SubResource("RectangleShape2D_drsr6")

[node name="Attack Player Detector" type="Area2D" parent="."]
position = Vector2(-526, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Player Detector"]
position = Vector2(633, 210.5)
shape = SubResource("RectangleShape2D_vmt1w")
debug_color = Color(0.988235, 0, 0.294118, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(239.5, 220.5)
shape = SubResource("RectangleShape2D_uowur")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-52, -59)
scale = Vector2(1.24351, 2.50156)
sprite_frames = SubResource("SpriteFrames_afeh1")
animation = &"running"
autoplay = "idle"
offset = Vector2(234.667, 92.3026)
flip_h = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(223, 235)

[connection signal="body_entered" from="Player Detector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="Player Detector" to="." method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="Attack Player Detector" to="." method="_on_attack_player_detector_body_entered"]
[connection signal="body_exited" from="Attack Player Detector" to="." method="_on_attack_player_detector_body_exited"]
